# prismo

./: .clang-format  .gitignore  meson.build  todo
.github/workflows/: ci-meson.yml
config/: config.json  config.yml  config_read_posix.json  read_posix.json  spdk_bdev.json  write_posix.json
include/access/: access.h  deserialize.h  pattern.h  random.h  random_pattern.h  sequential.h  sequential_pattern.h  synthetic.h  unreal.h  zipfian.h  zipfian_pattern.h
include/access/distribution/: binomial.h  distribution.h  random.h  sequential.h  zipf.h
include/access/distribution/implementation/: zipf.h
include/deserialize/: access_pattern.h
include/distribution/: distribution.h
include/engine/: aio.h  engine.h  posix.h  spdk.h  spdk_core.h  uring.h  utils.h
include/generator/: block.h  block_generator.h  const_generator.h  constant.h  constant_generator.h  dedup_compressor.h  generator.h  random.h  random_generator.h  synthetic.h
include/io/: flag.h  logger.h  metric.h  metrics.h  protocol.h
include/io/backend/: config.h  engine.h  io_uring_engine.h  posix_engine.h
include/io/backend/posix/: posix_config.h  posix_engine.h
include/io/engine/: aio.h  config.h  io_uring_engine.h  posix.h  uring.foo  uring.h  utils.h
include/io/logger/: spdlog.h
include/lib/blockingconcurrentqueue/: blockingconcurrentqueue.h  concurrentqueue.h
include/lib/concurrentqueue/: blockingconcurrentqueue.h
include/lib/distribution/: distribution.h  percentage.h  zipfian.h
include/lib/shishua/: shishua-sse2.h  utils.h
include/logger/: logger.h  spdlog.h
include/logger/spdlog/: config.h  spdlog.h
include/offset/: access.h  offset_strategy.h  synthetic_strategy.h  unreal.h
include/offset/distribution/: binomial_offset.h  distribution.h  offset_distribution.h  random_offset.h  sequential_offset.h  zipf_offset.h
include/operation/: barrier.h  constant.h  constant_pattern.h  deserialize.h  fixed_pattern.h  mixed_pattern.h  operation_pattern.h  pattern.h  percentage.h  percentage_pattern.h  sequence.h  synthetic.h  type.h
include/parser/: access.h  access_parser.h  backend_parser.h  engine.h  generator.h  generator_parser.h  logger.h  logger_parser.h  metric.h  metric_parser.h  operation.h  operation_parser.h  parser.h
include/pattern/: fixed.h  pattern.h  percentage.h
include/worker/: consumer.h  producer.h  thread.h  utils.h
report/: main.typ
report/chapters/: architecture.typ  background.typ  introduction.typ  relatedwork.typ
report/preamble/: abstract.typ  acronyms.typ
report/utils/: functions.typ
scripts/: .gitignore  dedup_analysis.py  offset_analysis.py  prismo_entry.py  requirements.txt
src/: main.cpp
src/access/: access.cpp  random.cpp  sequential.cpp  unreal.cpp  zipfian.cpp
src/access/distribution/: binomial.cpp  distribution.cpp  random.cpp
src/engine/: aio.cpp  posix.cpp  spdk.cpp  spdk_core.cpp  uring.cpp  utils.cpp
src/generator/: block.cpp  block_generator.cpp  const_generator.cpp  constant.cpp  dedup.cpp  dedup_compressor.cpp  random.cpp  random_generator.cpp
src/io/: logger.cpp
src/io/backend/: io_uring.cpp  posix.cpp
src/io/engine/: config.cpp  utils.cpp
src/io/logger/: spdlog.cpp
src/logger/: spdlog.cpp
src/logger/spdlog/: config.cpp  spdlog.cpp
src/offset/: synthetic_strategy.cpp
src/offset/distribution/: binomial_offset.cpp  offset_distribution.cpp  random_offset.cpp  sequential.cpp  sequential_offset.cpp  zipf.cpp  zipf_offset.cpp
src/operation/: barrier.cpp  constant.cpp  fixed_pattern.cpp  percentage.cpp  percentage_pattern.cpp  sequence.cpp
src/parser/: access.cpp  engine.cpp  generator.cpp  logger.cpp  metric.cpp  operation.cpp  parser.cpp
src/pattern/: percentage.cpp
